Remove guava from test code of the server module.